--- a/first_app/templates/profile.html
+++ b/first_app/templates/profile.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>여기는 {{username}} 프로필이다. 멋지지 !!!</h1>
+    <h1>여기는 {{asdf}} 프로필이다. 멋지지 !!!</h1>
 </body>
 </html>
